--- a/index1.html
+++ b/index1.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>salty</title>
     <!-- bootstrap css  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- root css  -->
     <link rel="stylesheet" href="./assets/css/root.css">
     <!-- my custom css  -->
     <link rel="stylesheet" href="./assets/css/style1.css">
 </head>
-<body>
-    <section>
 
-        
+<body>
+    <section class="bg_color_khaki">
+        <!-- Top Destinations section  -->
+        <div class="container">
+            <h2 class="ff_inter fw_600 text-center fs_11xl">Top Destinations</h2>
+        </div>
+
     </section>
 
     <!-- js bootstrap  -->
@@ -23,4 +29,5 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
