--- a/index1.html
+++ b/index1.html
@@ -22,26 +22,26 @@
             <h2 class="ff_inter fw_600 text-center fs_11xl color_darkblue pt-5 m-0">Top Destinations</h2>
             <p class="ff_inter fw_400 fs_lg color_gray text-center pt-3 m-0">Sost Brilliant reasons Entrada should be
                 your one-stop-shop!</p>
-            <div class="mw_550 mx-auto my-auto">
-                <div class="row justify-cont-btwn">
+            <div class="mw_550 ms-auto me-auto">
+                <div class="row justify-content-between ">
 
-                    <div class="col-2">
+                    <div class="col-2 m-0">
                         <button
                             class="ff_poppins fw_400 fs_md color_darkblue border-0 bg_color_khaki border_button_top_des br_30 px-4 py-2 m-0">London</button>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 m-0">
                         <button
                             class="ff_poppins fw_400 fs_md color_darkblue border-0 bg_color_khaki border_button_top_des br_30 px-4 py-2 m-0">Bangkok</button>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 m-0">
                         <button
                             class="ff_poppins fw_400 fs_md color_darkblue border-0 bg_color_khaki border_button_top_des br_30 px-4 py-2 m-0">England</button>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 m-0">
                         <button
                             class="ff_poppins fw_400 fs_md color_darkblue border-0 bg_color_khaki border_button_top_des br_30 px-4 py-2 m-0">Singapore</button>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 m-0">
                         <button
                             class="ff_poppins fw_400 fs_md color_darkblue border-0 bg_color_khaki border_button_top_des br_30 px-4 py-2 m-0">Italy</button>
                     </div>
