--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
     <title>Salty</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <!-- custum css -->
+        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/root.css">
 </head>
 
-<body>
-    <header>
+<body class="bg_khaki">
+    <header class="pt-4">
         <nav>
-            <div class="container">
-                <div>
-                    <div class="d-flex">
+            <div class="container pt-2">
+                <div class="d-flex align-items-center">
+                    <div class="d-flex me-4 pe-3 align-items-center">
                         <img src="./assets/img/png/site_logo.png" alt="logo">
-                        <h2>Salty</h2>
+                        <h2 class="fw_700 fs_3xl ff_sen color_darkblue mb-0">Salty</h2>
                     </div>
-                    <div>
-                        <ul>
+                    <div class="d-flex justify-content-between w-100 ">
+                        <ul class="d-flex mb-0 gap_36">
                             <li><a href="#">Home</a></li>
                             <li><a href="#">About us</a></li>
                             <li><a href="#">Destinations</a></li>
