--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Salty</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link rel="shortcut icon" href="./assets/img/png/fav.png" type="image/x-icon">
     <!-- custum css -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/style1.css">
@@ -510,7 +511,7 @@
                                 for our first outdoor adventure trip.
                                 They responded very quickly and
                                 gave me a detailed account of the place—its history, as well as its best features.</p>
-                            <div class="m-0 text-center text-sm-start pt-4">
+                            <div class="m-0 text-center text-sm-start pt-4 d-flex justify-content-center justify-content-sm-start">
                                 <img src="./assets/images/png/Star_group.png" alt="star group">
                             </div>
                             <div
@@ -546,7 +547,7 @@
                                 for our first outdoor adventure trip.
                                 They responded very quickly and
                                 gave me a detailed account of the place—its history, as well as its best features.</p>
-                            <div class="m-0 text-center text-sm-start pt-4">
+                            <div class="m-0 text-center text-sm-start pt-4 d-flex justify-content-center justify-content-sm-start">
                                 <img src="./assets/images/png/Star_group.png" alt="star group">
                             </div>
                             <div
@@ -582,7 +583,7 @@
                                 for our first outdoor adventure trip.
                                 They responded very quickly and
                                 gave me a detailed account of the place—its history, as well as its best features.</p>
-                            <div class="m-0 text-center text-sm-start pt-4">
+                            <div class="m-0 text-center text-sm-start pt-4 d-flex justify-content-center justify-content-sm-start">
                                 <img src="./assets/images/png/Star_group.png" alt="star group">
                             </div>
                             <div
@@ -782,8 +783,8 @@
             dots: false,
             infinite: true,
             speed: 1000,
-            autoplay: true,
-            autoplaySpeed: 1000,
+            // autoplay: true,
+            // autoplaySpeed: 1000,
             slidesToShow: 6,
             slidesToScroll: 1,
             nextArrow: ".next",
@@ -828,8 +829,8 @@
             dots: false,
             infinite: true,
             speed: 1000,
-            autoplay: true,
-            autoplaySpeed: 1000,
+            // autoplay: true,
+            // autoplaySpeed: 1000,
             slidesToShow: 3,
             slidesToScroll: 1,
             nextArrow: ".next1",
@@ -889,6 +890,7 @@
     <script>
         function shownav() {
             document.getElementById("showul").classList.toggle("nav_left0")
+            document.body.classList.toggle("overflow-hidden")
         }
     </script>
 </body>
